[gd_scene load_steps=10 format=2]

[ext_resource path="res://level/level_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://level/grid_objects.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://level/grid_floor.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://traps/fireball.tscn" type="PackedScene" id=4]
[ext_resource path="res://traps/fire_trap.tscn" type="PackedScene" id=5]
[ext_resource path="res://actionables/lever.tscn" type="PackedScene" id=6]
[ext_resource path="res://level/sections/boss.gd" type="Script" id=7]
[ext_resource path="res://actionables/door.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.105981, 2.08713, 0.644717 )

[node name="Boss" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="WallGrid" parent="." index="0"]
data = {
"cells": PoolIntArray( 65526, 20, 0, 65527, 20, 1, 65524, 21, 1048582, 65525, 21, 538312705, 65527, 21, 536870913, 65525, 22, 538312704, 65527, 22, 1, 65526, 23, 537526278, 65526, 24, 655366, 65526, 25, 655365, 65525, 26, -1610612736, 65527, 26, 1441792, 65522, 27, 0, 65523, 27, 1441793, 65524, 27, 1048581, 65528, 27, 1441797, 65522, 28, 1, 65523, 28, 655361, 65525, 28, 1048576, 65527, 28, -1609957376, 65522, 29, 1, 65523, 29, 655361, 65526, 29, 5, 65522, 30, 1048576, 65523, 30, 655360, 65525, 30, 536870912, 65527, 30, 1441792, 65525, 31, 1048576, 65526, 31, 1048577, 65527, 31, 655360 )
}

[node name="FloorGrid" parent="." index="1"]
data = {
"cells": PoolIntArray( 65526, 20, 0, 65524, 21, -1610612736, 65525, 21, -1073741824, 65526, 21, 1073741824, 65525, 22, 0, 65526, 22, 0, 65526, 23, 0, 65526, 24, 0, 65526, 25, 0, 65525, 26, 0, 65526, 26, -1610612736, 65527, 26, -1610612736, 65522, 27, -1610612736, 65523, 27, 0, 65524, 27, 536870912, 65525, 27, 0, 65526, 27, 536870912, 65527, 27, 0, 65528, 27, 536870912, 65522, 28, 0, 65523, 28, 0, 65524, 28, 0, 65525, 28, 0, 65526, 28, 0, 65527, 28, 0, 65522, 29, 0, 65523, 29, 0, 65526, 29, 0, 65522, 30, -1610612736, 65523, 30, -1610612736, 65525, 30, 0, 65526, 30, 0, 65527, 30, 0, 65525, 31, 0, 65526, 31, 0, 65527, 31, 0 )
}

[node name="TrapZone2" type="Spatial" parent="." index="3"]

[node name="WallGrid" type="GridMap" parent="TrapZone2" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 2, 19, 0, 3, 19, 1441792, 0, 20, -1609170938, 1, 20, 1441797, 3, 20, -1609957375, 65535, 20, 1441798, 2, 21, -1072693248, 3, 21, 655360 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid5" type="GridMap" parent="TrapZone2" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 2, 19, 0, 3, 19, -1610612736, 0, 20, 0, 1, 20, 0, 2, 20, 0, 3, 20, 0, 65535, 20, 0, 2, 21, 0, 3, 21, -1610612736 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="TrapZone3" type="Spatial" parent="." index="4"]

[node name="WallGrid" type="GridMap" parent="TrapZone3" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 65531, 30, 655364, 65531, 31, 655364, 65531, 32, 536870915, 65532, 32, 1048577, 65531, 33, 1048576, 65532, 33, 655360 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid4" type="GridMap" parent="TrapZone3" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 65531, 30, 0, 65531, 31, 0, 65531, 32, 0, 65531, 33, 0, 65532, 33, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FireTrap4" parent="TrapZone3" index="2" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.08027, 0, 61.6371 )
interval = 2.0
turn_on = true

[node name="FireTrap5" parent="TrapZone3" index="3" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.05263, 0, 62.716 )
start_delay = 1.0
interval = 2.0
turn_on = true

[node name="PuzzleBoss" type="Spatial" parent="." index="5"]

[node name="WallGrid" type="GridMap" parent="PuzzleBoss" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 6, 25, 1048577, 5, 26, 0, 7, 26, 1441792, 1, 27, 1441796, 2, 27, 1441796, 3, 27, 1441796, 4, 27, 1048579, 8, 27, 1441795, 9, 27, 1441796, 5, 28, 1048576, 7, 28, 655360, 6, 29, 1441793 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid4" type="GridMap" parent="PuzzleBoss" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="BossFight" type="Spatial" parent="." index="6"]

[node name="WallGrid" type="GridMap" parent="BossFight" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 12, 25, 0, 13, 25, 1441793, 14, 25, 1441793, 15, 25, 1441793, 16, 25, 1441793, 17, 25, 1441792, 12, 26, 1, 18, 26, 1, 10, 27, 1441796, 11, 27, 1048579, 18, 27, 1, 12, 28, 1, 18, 28, 1, 12, 29, 1048576, 13, 29, 1048577, 14, 29, 1048577, 15, 29, 1048577, 16, 29, 1048577, 17, 29, 655360 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid3" type="GridMap" parent="BossFight" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 12, 25, -1073741824, 13, 25, 0, 14, 25, 0, 15, 25, 536870912, 16, 25, 0, 17, 25, 0, 5, 26, 536870912, 6, 26, 536870912, 7, 26, 0, 11, 26, 0, 12, 26, 0, 13, 26, 0, 14, 26, 0, 15, 26, 536870912, 16, 26, 0, 17, 26, 0, 1, 27, 0, 2, 27, 0, 3, 27, -1610612736, 4, 27, 0, 5, 27, 0, 6, 27, 0, 7, 27, 0, 8, 27, 536870912, 9, 27, 0, 10, 27, 0, 11, 27, 0, 12, 27, 0, 13, 27, 0, 14, 27, 0, 15, 27, 0, 16, 27, 0, 17, 27, 0, 5, 28, 0, 6, 28, 536870912, 7, 28, 536870912, 11, 28, 0, 12, 28, 0, 13, 28, 0, 14, 28, 536870912, 15, 28, 0, 16, 28, 0, 17, 28, 536870912, 12, 29, 536870912, 13, 29, 0, 14, 29, 536870912, 15, 29, 0, 16, 29, 0, 17, 29, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="TrapZone1" type="Spatial" parent="." index="7"]

[node name="WallGrid" type="GridMap" parent="TrapZone1" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 65532, 20, 536870912, 65533, 20, 538312705, 65534, 20, 1441793, 65532, 21, -1609170944, 65534, 21, 0, 65532, 22, 655367, 65534, 22, 7, 65532, 23, 655367, 65534, 23, 7, 65532, 24, 655367, 65534, 24, 7 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid2" type="GridMap" parent="TrapZone1" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 65532, 20, 0, 65533, 20, 0, 65534, 20, 0, 65532, 21, 0, 65533, 21, 0, 65534, 21, 536870912, 65532, 22, 655360, 65533, 22, 0, 65534, 22, 655360, 65532, 23, 655360, 65533, 23, 0, 65534, 23, -1609957376, 65532, 24, 655360, 65533, 24, 0, 65534, 24, 655360 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Fireball" parent="TrapZone1" index="2" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.518, 1.3, 49 )
shoot_delay = 2.0
speed = 3.0
active = true

[node name="Fireball2" parent="TrapZone1" index="3" instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3.518, 1.3, 44.9687 )
shoot_delay = 2.0
speed = 3.0
active = true

[node name="Fireball3" parent="TrapZone1" index="4" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -6.52766, 1.3, 47.0172 )
shoot_delay = 2.0
start_delay = 1.0
speed = 3.0
active = true

[node name="FireTrap" parent="TrapZone1" index="5" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.888801, 0, 41.085 )
interval = 2.0
turn_on = true

[node name="FireTrap2" parent="TrapZone1" index="6" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.13862, 0, 41.085 )
start_delay = 2.0
interval = 2.0
turn_on = true

[node name="FireTrap3" parent="TrapZone1" index="7" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1049, 0, 41.085 )
interval = 2.0
turn_on = true

[node name="Entrrance" type="Spatial" parent="." index="8"]

[node name="WallGrid" type="GridMap" parent="Entrrance" index="0"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray( 65533, 25, 655365, 65529, 26, 0, 65530, 26, 1441793, 65531, 26, 1441793, 65532, 26, 1441793, 65534, 26, 1441793, 65535, 26, 1441792, 0, 27, 1441795, 65529, 28, 1048576, 65530, 28, 1048577, 65532, 28, 1048577, 65533, 28, 1048577, 65534, 28, 1048577, 65535, 28, 655360, 65531, 29, 655365 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="FloorGrid" type="GridMap" parent="Entrrance" index="1"]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 65533, 25, 0, 65529, 26, 0, 65530, 26, 0, 65531, 26, 0, 65532, 26, 0, 65533, 26, 0, 65534, 26, 0, 65535, 26, 0, 0, 27, -1610612736, 65529, 27, 0, 65530, 27, 0, 65531, 27, 0, 65532, 27, 536870912, 65533, 27, 0, 65534, 27, 0, 65535, 27, 0, 65529, 28, -1610612736, 65530, 28, 0, 65531, 28, 0, 65532, 28, 0, 65533, 28, 0, 65534, 28, 0, 65535, 28, 0, 65531, 29, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="TrapLever" parent="." index="9" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, 1, 1.62921e-07, 0, -1.62921e-07, 1, 1, 1.62921e-07, 2.65431e-14, -8.00377, 1.4, 41.2359 )

[node name="TrapLever2" parent="." index="10" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, 8.02674, 1.4, 42.944 )

[node name="TrapLever3" parent="." index="11" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, -5.98814, 1.4, 66.4135 )

[node name="BossGateLever" parent="." index="12" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, 8.02674, 1.4, 39.2724 )

[node name="BossGateLever2" parent="." index="13" instance=ExtResource( 6 )]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, -5.97912, 1.4, 67.1092 )

[node name="BossDoor1" parent="." index="14" instance=ExtResource( 8 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 2.12711, 0, 55.0133 )
initial_open = false
is_lock = true
is_iron = true

[node name="MainBossDoor" parent="." index="15" instance=ExtResource( 8 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 16.9074, 0, 55.0133 )
initial_open = false
is_lock = false
is_iron = false

[node name="BossDoor2" parent="." index="16" instance=ExtResource( 8 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 7.87943, 0, 55.0133 )
initial_open = false
is_lock = true
is_iron = true

[node name="BossTrigger" type="Area" parent="." index="17"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20.042, 0, 53.287 )

[node name="CollisionShape" type="CollisionShape" parent="BossTrigger" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.97689, 0, 1.71671 )
shape = SubResource( 1 )
[connection signal="triggered" from="TrapLever" to="." method="_on_trap_lever_triggered"]
[connection signal="triggered" from="TrapLever2" to="." method="_on_trap_lever_2_triggered"]
[connection signal="triggered" from="TrapLever3" to="." method="_on_trap_lever_3_triggered"]
[connection signal="triggered" from="BossGateLever" to="." method="_on_boss_gate_lever_triggered"]
[connection signal="triggered" from="BossGateLever2" to="." method="_on_boss_gate_lever_2_triggered"]
[connection signal="body_entered" from="BossTrigger" to="." method="_on_boss_trigger_body_entered"]
